GNOME Bugzilla – Bug 695135
memory leaks
Last modified: 2013-03-04 18:08:21 UTC
See patches...
Created attachment 238013 [details] [review] Free memory allocated by XIQueryPointer()
Created attachment 238014 [details] [review] window-actor: Fix leaked opaque_region
Created attachment 238015 [details] [review] window-actor: Fix leaked frame list
Review of attachment 238014 [details] [review]: Looks good.
Review of attachment 238015 [details] [review]: OK.
Review of attachment 238013 [details] [review]: Yes, but please make sure to include <stdlib.h> anywhere you are adding a call to free().
Created attachment 238023 [details] [review] Free memory allocated by XIQueryPointer() v2 >Yes, but please make sure to include <stdlib.h> anywhere you are adding a call >to free(). Done.
Review of attachment 238023 [details] [review]: Thanks. Do you have a git account or do you need someone to push these for you?
I don't have a git account. Please commit.
Attachment 238014 [details] pushed as 7db236b - window-actor: Fix leaked opaque_region Attachment 238015 [details] pushed as 4d437e3 - window-actor: Fix leaked frame list OK - thanks for the patches btw!