Free memory allocated by XIQueryPointer()

https://bugzilla.gnome.org/show_bug.cgi?id=695135